# PrePPO

./: .gitignore  PRESENTATION.md  README.md  fed_ppo.ipynb  ppo.ipynb  pyproject.toml  requirements.txt  reward_model.ipynb  utils.py
fed_ppo/: utils.py
notebooks/: evaluation.ipynb  fed_ppo.ipynb  normalization.ipynb  ppo.ipynb  reward_model.ipynb
paper/: PRESENTATION.md
scripts/: normalize_reward.py  ppo.py  reward.py  sft.py
src/fed_ppo/: callbacks.py  hf_ppo.py  ppo_trainer.py  utils.py
src/fed_ppo/scripts/: ppo.py
src/hf-ppo/: prompts.py
src/hf-ppo/scripts/datasets/: prepare_tldr_preference.py
src/hf_ppo/: utils.py
src/hf_ppo/arbiters/: vllm_arbiter.py
src/hf_ppo/scripts/: evaluation.py  inference.py  reward.py  sft.py
src/hf_ppo/scripts/alpaca/datasets/: prepare_alpaca_cleaned.py
src/hf_ppo/scripts/datasets/: data_utils.py
src/hf_ppo/scripts/datasets/tldr/: prepare_tldr_ppo.py  prepare_tldr_sft.py
src/hf_ppo/scripts/helpsteer3/datasets/: prepare_helpsteer_code.py
src/hf_ppo/scripts/tldr/: reward.py  sft.py  side_by_side_evaluation.py
src/hf_ppo/scripts/tldr/datasets/: prepare_comparison_dataset.py  prepare_fed_rlhf_comp_dataset.py  prepare_tldr_ppo.py  prepare_tldr_preference.py  prepare_tldr_sft.py  prepare_tldr_thematic.py
src/hf_ppo/scripts/ultrachat/datasets/: prepare_ultrachat_ppo.py
src/hf_ppo/scripts/wiki_lingua/: reward.py
src/hf_ppo/scripts/wiki_lingua/datasets/: prepare_wiki_lingua.py  prepare_wiki_lingua_paired.py  prepare_wiki_lingua_ppo.py  prepare_wiki_lingua_preference.py  prepare_wiki_lingua_reward.py  prepare_wiki_lingua_with_responses.py
src/pre_ppo/: data_utils.py  utils.py
src/pre_ppo/scripts/alpaca/datasets/: prepare_alpaca_cleaned.py
src/pre_ppo/scripts/helpsteer3/datasets/: prepare_helpsteer_multilingual.py
src/pre_ppo/scripts/tldr/: evp.ipynb  reward.py  sft.py
src/pre_ppo/scripts/tldr/datasets/: prepare_comparison_dataset.py  prepare_fed_rlhf_comp_dataset.py  prepare_tldr_ppo.py  prepare_tldr_preference.py  prepare_tldr_sft.py  prepare_tldr_thematic.py
src/pre_ppo/scripts/tldr/resources/: wandb_export_llama_ptldr_ppo.csv  wandb_export_llama_tldr_ppo.csv  wandb_export_mistral_ptldr_fedavg.csv  wandb_export_mistral_tldr_grpo.csv  wandb_export_ptldr.csv  wandb_export_ptldr_grpo.csv  wandb_export_tldr.csv
src/pre_ppo/scripts/ultrachat/datasets/: prepare_ultrachat_ppo.py
src/pre_ppo/scripts/wiki_lingua/: reward.py
(+4 files in other folders)
