[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fed-ppo"
version = "0.0.1"
authors = [
    {name = "Arkadiy Vladimirov", email = "ark.vladimirov@outlook.com"},
    {name = "Evgeny Gurov", email = "evgurovv@gmail.com"},
]
description = "Federated RLHF - Federated PPO for Decentralized Cooperative Policy Optimization"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = [
	# huggingface ecosystem
	"accelerate",
	"bitsandbytes",
	"datasets",
	"peft",
	"transformers",
	"trl",
	# ipython dependencies
	"ipywidgets",
	# logging
	"wandb",
	# evaluation judge
	"openai"
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
	"E", "W", # pycodestyle rule set
	"F", # pyflakes rule set
]
