[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "preppo"
version = "0.0.1"
authors = [
    {name = "Evgeny Gurov", email = "evgurovv@gmail.com"},
    {name = "Arkadiy Vladimirov", email = "ark.vladimirov@outlook.com"},
]
description = "Auxilary preparation steps for RLHF PPO"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
	# huggingface ecosystem
	"accelerate",
	"bitsandbytes",
	"datasets",
	"peft",
	"transformers",
	"trl",
	# ipython dependencies
	"ipywidgets",
	"sentencepiece",
	# logging
	"wandb",
	# evaluation judge
	"openai",
	# inference
	"vllm"
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
	"E", "W", # pycodestyle rule set
	"F", # pyflakes rule set
]
